--- a/pages/sous-pages/page3.html
+++ b/pages/sous-pages/page3.html
@@ -11,7 +11,7 @@
     <h2>
       On a fait le tour maintenant retour à l'accueil en complétant ce lien
     </h2>
-    <a href="../../index.html">Lien vers la page index.html</a
+    <a href="/index.html">Lien vers la page index.html</a
     ><!--COMPLETER L'ATTRIBUT HREF-->
   </body>
 </html>
