--- a/pages/page1.html
+++ b/pages/page1.html
@@ -14,7 +14,7 @@
       (premier lien) puis à la page 2 (2 e lien)
     </h2>
     <p>
-      <a href="../index.html">Retour à la page index.html</a
+      <a href="/index.html">Retour à la page index.html</a
       ><!--COMPLETER L'ATTRIBUT HREF-->
     </p>
 
