--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Ici c'est l'accueil (notre page index.hmtl)</h1>
     <h2>Votre mission nous ammener à la page 1</h2>
-    <a href="pages/page1.html">Lien vers la page1.html</a>
+    <a href="./pages/page1.html">Lien vers la page1.html</a>
     <!--COMPLETER L'ATTRIBUT HREF-->
   </body>
 </html>
