--- a/pages/page1.html
+++ b/pages/page1.html
@@ -14,12 +14,12 @@
       (premier lien) puis à la page 2 (2 e lien)
     </h2>
     <p>
-      <a href="/index.html">Retour à la page index.html</a
+      <a href="../index.html">Retour à la page index.html</a
       ><!--COMPLETER L'ATTRIBUT HREF-->
     </p>
 
     <p>
-      <a href="sous-pages/page2.html">Lien vers la page2.html</a
+      <a href="./sous-pages/page2.html">Lien vers la page2.html</a
       ><!--COMPLETER L'ATTRIBUT HREF-->
     </p>
   </body>
